Updated to modern landing page

--- a/index.html
+++ b/index.html
@@ -1,47 +1,28 @@
-!DOCTYPE html
-html lang=en
-head
-  meta charset=UTF-8 
-  meta name=viewport content=width=device-width, initial-scale=1.0 
-  titleDevils Meet Apptitle
-  style
-    body {
-      font-family sans-serif;
-      margin 0;
-      padding 0;
-      background #121212;
-      color #fff;
-      text-align center;
-    }
-    header {
-      padding 2rem;
-      background-color #bb0000;
-    }
-    h1 {
-      margin 0;
-    }
-    section {
-      padding 2rem;
-    }
-    a.button {
-      background #fff;
-      color #bb0000;
-      padding 1rem 2rem;
-      border-radius 10px;
-      text-decoration none;
-      font-weight bold;
-    }
-  style
-head
-body
-  header
-    h1🔥 Devils Meeth1
-    pThe hottest way to meet Sun Devilsp
-  header
-  section
-    h2Launch Coming Soonh2
-    pWe're building something exciting for ASU students.p
-    a href=# class=buttonFollow us on Instagrama
-  section
-body
-html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Devils Meet App</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-black text-white font-sans">
+    <div class="min-h-screen flex flex-col justify-center items-center text-center p-8">
+      <h1 class="text-5xl md:text-6xl font-bold text-red-600 mb-4">🔥 Devils Meet</h1>
+      <p class="text-xl md:text-2xl mb-6 max-w-xl">
+        The hottest way to meet Sun Devils. Built by ASU students, for ASU students.
+      </p>
+      <a
+        href="https://instagram.com/YOUR-INSTAGRAM-HANDLE"
+        target="_blank"
+        class="bg-white text-black font-semibold py-3 px-6 rounded-2xl hover:bg-red-600 hover:text-white transition"
+      >
+        Follow us on Instagram
+      </a>
+
+      <div class="mt-10 text-sm text-gray-400">
+        © 2025 Devils Meet • Made with 🔥 in Tempe
+      </div>
+    </div>
+  </body>
+</html>
