Update with Image and IG link

--- a/index.html
+++ b/index.html
@@ -7,22 +7,37 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-black text-white font-sans">
-    <div class="min-h-screen flex flex-col justify-center items-center text-center p-8">
+    <!-- Hero Section -->
+    <div class="min-h-screen flex flex-col justify-center items-center text-center px-6 py-16">
       <h1 class="text-5xl md:text-6xl font-bold text-red-600 mb-4">🔥 Devils Meet</h1>
       <p class="text-xl md:text-2xl mb-6 max-w-xl">
         The hottest way to meet Sun Devils. Built by ASU students, for ASU students.
       </p>
       <a
-        href="https://instagram.com/YOUR-INSTAGRAM-HANDLE"
+        href="https://www.instagram.com/devils.meet/"
         target="_blank"
         class="bg-white text-black font-semibold py-3 px-6 rounded-2xl hover:bg-red-600 hover:text-white transition"
       >
         Follow us on Instagram
       </a>
+    </div>
 
-      <div class="mt-10 text-sm text-gray-400">
-        © 2025 Devils Meet • Made with 🔥 in Tempe
-      </div>
+    <!-- Image Section -->
+    <div class="flex justify-center">
+      <img src="240920 ASU ASUStudentsAtCaliforniaGrandCenter_1427 – SC.jpg" alt="ASU Students" class="rounded-2xl w-full max-w-5xl shadow-lg" />
+    </div>
+
+    <!-- Mission Section -->
+    <div class="px-6 py-16 max-w-4xl mx-auto text-center">
+      <h2 class="text-3xl md:text-4xl font-bold text-red-500 mb-4">Our Mission</h2>
+      <p class="text-lg md:text-xl text-gray-300 leading-relaxed">
+        The strongest bonds are formed in the pursuit of a shared goal. <strong>Devils Meet</strong> is built to connect ASU students with people who have their back — whether it's for academics, careers, or relationships. We're here to help you find the right people so you can grow, thrive, and enjoy the journey together.
+      </p>
+    </div>
+
+    <!-- Footer -->
+    <div class="text-sm text-gray-500 text-center pb-10">
+      © 2025 Devils Meet • Made with 🔥 in Tempe
     </div>
   </body>
 </html>
