--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Image Section -->
     <div class="flex justify-center">
-      <img src="240920 ASU ASUStudentsAtCaliforniaGrandCenter_1427 – SC.jpg" alt="ASU Students" class="rounded-2xl w-full max-w-5xl shadow-lg" />
+        <img src="ASUpic.jpg" alt="ASU Students" class="rounded-2xl w-full max-w-5xl shadow-lg" />
     </div>
 
     <!-- Mission Section -->
