--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-black text-white font-sans">
-    <!-- Header Section -->
-    <div class="min-h-[60vh] flex flex-col justify-end items-center text-center px-6 pt-24 pb-12">
-      <h1 class="text-5xl md:text-6xl font-bold text-red-600 mb-6">🔥 Devils Meet</h1>
+    <!-- TOP NAV / HEADER BAR -->
+    <header class="w-full bg-black shadow-md py-6 text-center z-50">
+      <h1 class="text-4xl md:text-5xl font-bold text-red-600">🔥 Devils Meet</h1>
+    </header>
+
+    <!-- CALL TO ACTION -->
+    <div class="w-full flex justify-center mt-6">
       <a
         href="https://www.instagram.com/devils.meet/"
         target="_blank"
@@ -19,12 +23,12 @@
       </a>
     </div>
 
-    <!-- Image Section (Moved Up) -->
-    <div class="flex justify-center px-4 mb-16">
+    <!-- IMAGE SECTION (Moved Higher) -->
+    <div class="flex justify-center px-4 mt-10 mb-16">
       <img src="ASUpic.jpg" alt="ASU Students" class="rounded-2xl w-full max-w-5xl shadow-lg" />
     </div>
 
-    <!-- Mission Section -->
+    <!-- MISSION SECTION -->
     <div class="px-6 py-16 max-w-4xl mx-auto text-center">
       <h2 class="text-3xl md:text-4xl font-bold text-red-500 mb-4">Our Mission</h2>
       <p class="text-lg md:text-xl text-gray-300 leading-relaxed">
@@ -32,9 +36,9 @@
       </p>
     </div>
 
-    <!-- Footer -->
-    <div class="text-sm text-gray-500 text-center pb-10">
+    <!-- FOOTER -->
+    <footer class="text-sm text-gray-500 text-center pb-10">
       © 2025 Devils Meet 
-    </div>
+    </footer>
   </body>
 </html>
