--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-black text-white font-sans">
-    <!-- TOP NAV / HEADER BAR -->
-    <header class="w-full bg-black shadow-md py-6 text-center z-50">
+    <!-- TOP BAR (White Background) -->
+    <header class="w-full bg-white shadow-md py-6 text-center z-50">
       <h1 class="text-4xl md:text-5xl font-bold text-red-600">🔥 Devils Meet</h1>
     </header>
 
-    <!-- CALL TO ACTION -->
+    <!-- CTA Button -->
     <div class="w-full flex justify-center mt-6">
       <a
         href="https://www.instagram.com/devils.meet/"
@@ -23,13 +23,13 @@
       </a>
     </div>
 
-    <!-- IMAGE SECTION (Moved Higher) -->
-    <div class="flex justify-center px-4 mt-10 mb-16">
+    <!-- IMAGE SECTION -->
+    <div class="flex justify-center px-4 mt-10 mb-10">
       <img src="ASUpic.jpg" alt="ASU Students" class="rounded-2xl w-full max-w-5xl shadow-lg" />
     </div>
 
-    <!-- MISSION SECTION -->
-    <div class="px-6 py-16 max-w-4xl mx-auto text-center">
+    <!-- MISSION SECTION (Moved Up Slightly) -->
+    <div class="px-6 pt-6 pb-16 max-w-4xl mx-auto text-center">
       <h2 class="text-3xl md:text-4xl font-bold text-red-500 mb-4">Our Mission</h2>
       <p class="text-lg md:text-xl text-gray-300 leading-relaxed">
         The strongest bonds are formed in the pursuit of a shared goal. <strong>Devils Meet</strong> is built to connect ASU students with people who have their back — whether it's for academics, careers, or relationships. We're here to help you find the right people so you can grow, thrive, and enjoy the journey together.
