--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body class="bg-black text-white font-sans">
     <!-- TOP BAR (White Background) -->
     <header class="w-full bg-white shadow-md py-6 text-center z-50">
-      <h1 class="text-4xl md:text-5xl font-bold text-red-600">🔥 Devils Meet</h1>
+      <div class="flex justify-center items-center gap-4">
+        <img src="logo.png" alt="Devils Meet Logo" class="h-12 md:h-16" />
+        <h1 class="text-4xl md:text-5xl font-bold text-red-600">Devils Meet</h1>
+      </div>
     </header>
 
     <!-- CTA Button -->
@@ -28,7 +31,7 @@
       <img src="ASUpic.jpg" alt="ASU Students" class="rounded-2xl w-full max-w-5xl shadow-lg" />
     </div>
 
-    <!-- MISSION SECTION (Moved Up Slightly) -->
+    <!-- MISSION SECTION -->
     <div class="px-6 pt-6 pb-16 max-w-4xl mx-auto text-center">
       <h2 class="text-3xl md:text-4xl font-bold text-red-500 mb-4">Our Mission</h2>
       <p class="text-lg md:text-xl text-gray-300 leading-relaxed">
@@ -38,7 +41,7 @@
 
     <!-- FOOTER -->
     <footer class="text-sm text-gray-500 text-center pb-10">
-      © 2025 Devils Meet 
+      © 2025 Devils Meet
     </footer>
   </body>
 </html>
