--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Devils Meet App</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Font Awesome for Instagram icon -->
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   </head>
   <body class="bg-black text-white font-sans">
     <!-- TOP BAR WITH LOGO ONLY -->
@@ -16,14 +14,17 @@
       </div>
     </header>
 
-    <!-- CTA BUTTON -->
+    <!-- CTA BUTTON with Instagram SVG -->
     <div class="w-full flex justify-center mt-6">
       <a
         href="https://www.instagram.com/devils.meet/"
         target="_blank"
         class="flex items-center gap-3 bg-white text-black font-semibold py-3 px-6 rounded-2xl hover:bg-red-600 hover:text-white transition"
       >
-        <i class="fab fa-instagram text-xl"></i>
+        <!-- Instagram SVG -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M7.75 2A5.75 5.75 0 002 7.75v8.5A5.75 5.75 0 007.75 22h8.5A5.75 5.75 0 0022 16.25v-8.5A5.75 5.75 0 0016.25 2h-8.5zM4.5 7.75A3.25 3.25 0 017.75 4.5h8.5a3.25 3.25 0 013.25 3.25v8.5a3.25 3.25 0 01-3.25 3.25h-8.5a3.25 3.25 0 01-3.25-3.25v-8.5zm7.5.75a4.5 4.5 0 100 9 4.5 4.5 0 000-9zm0 1.5a3 3 0 110 6 3 3 0 010-6zm4.88-2.13a1 1 0 100 2 1 1 0 000-2z"/>
+        </svg>
         Follow us on Instagram
       </a>
     </div>
