--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
   </head>
   <body class="bg-black text-white font-sans">
     <!-- TOP BAR WITH LOGO ONLY -->
-    <header class="w-full bg-white shadow-md py-6 text-center z-50">
-      <div class="flex justify-center items-center">
-        <img src="logo.png" alt="Devils Meet Logo" class="h-24 md:h-32" />
-      </div>
-    </header>
+    <header class="w-full bg-white shadow-md py-6 px-6 flex justify-between items-center z-50">
+  <!-- Logo -->
+  <div class="flex items-center">
+    <img src="logo.png" alt="Devils Meet Logo" class="h-24 md:h-32" />
+  </div>
+
+  <!-- Promote Button -->
+  <a
+    href="promote.html"
+    class="bg-[#8C1D40] text-[#FFC627] font-semibold py-2 px-4 rounded-lg hover:bg-[#731735] transition"
+  >
+    Promote Your Business
+  </a>
+</header>
 
     <!-- CTA BUTTON with Instagram SVG -->
     <div class="w-full flex justify-center mt-6">
