--- a/promote.html
+++ b/promote.html
@@ -1,36 +1,32 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Promote Your Business | Devils Meet</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Promote Your Business | Devils Meet</title>
+<script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-[#8C1D40] font-sans leading-relaxed">
-  <!-- Header with Button -->
-  <header class="w-full bg-[#8C1D40] text-[#FFC627] py-6 px-6 shadow-md flex justify-between items-center">
-    <h1 class="text-2xl md:text-3xl font-bold">Promote Your Business</h1>
-    <a 
-      href="mailto:Devilsmeet2@gmail.com" 
-      class="bg-[#FFC627] text-[#8C1D40] font-semibold py-2 px-4 rounded-lg hover:bg-yellow-400 transition"
-    >
+<!-- Header with Button -->
+<header class="w-full bg-[#8C1D40] text-[#FFC627] py-6 px-6 shadow-md flex justify-between items-center">
+<h1 class="text-2xl md:text-3xl font-bold">Promote Your Business</h1>
+<a class="bg-[#FFC627] text-[#8C1D40] font-semibold py-2 px-4 rounded-lg hover:bg-yellow-400 transition" href="mailto:Devilsmeet2@gmail.com">
       Contact Us to Advertise
     </a>
-  </header>
-
-  <!-- Image Section -->
-  <section class="max-w-4xl mx-auto px-4 py-10">
-    <img src="promote_assets.png" alt="Ad Placement Options" class="w-full rounded-xl shadow-lg" />
-  </section>
-
-  <!-- Info Content Section -->
-  <section class="max-w-4xl mx-auto px-4 pb-16 text-base">
-    <h2 class="text-2xl font-semibold mt-10 mb-4">Advertising Options to Reach ASU Students: Campus Avenues vs. Devils Meet</h2>
+</header>
+<!-- Image Section -->
+<section class="max-w-4xl mx-auto px-4 py-10">
+<img alt="Ad Placement Options" class="w-full rounded-xl shadow-lg" src="promote_assets.png"/>
+</section>
+<!-- Info Content Section -->
+<section class="max-w-4xl mx-auto px-4 pb-16 text-base">
+<h2 class="text-2xl font-semibold mt-10 mb-4">Advertising Options to Reach ASU Students: Campus Avenues vs. Devils Meet</h2>
 <p class="mb-4 leading-relaxed text-[#333]">Local businesses in Tempe have several ways to promote themselves to Arizona State University (ASU) students. Below we examine traditional on-campus advertising options – from pop-up booths to banners and flyers – including recent pricing (2023–2025) and typical reach. We then compare these with digital avenues and ultimately show why Devils Meet, an ASU-exclusive platform, offers significantly better value, targeted reach, and ROI for reaching the Sun Devil student community.</p>
 <h2 class="text-2xl font-semibold mt-10 mb-4">Pop-Up Shops and On-Campus Booths</h2>
 <p class="mb-4 leading-relaxed text-[#333]">Overview: Many local businesses try to reach students by setting up a table or pop-up shop on ASU’s Tempe campus. ASU permits Non-University Organizations (NUOs) to do this, but there is a formal process, cost, and limit on frequency.</p>
-<p class="mb-4 leading-relaxed text-[#333]">Coordination & Requirements: An outside business must be sponsored by a Registered Student Organization (RSO) and register each semester with ASU’s Event & Meeting Services office​
+<p class="mb-4 leading-relaxed text-[#333]">Coordination &amp; Requirements: An outside business must be sponsored by a Registered Student Organization (RSO) and register each semester with ASU’s Event &amp; Meeting Services office​
 . The business must carry liability insurance and obtain city/state permits (sales tax license, etc.)​
 ​
 . Importantly, ASU had paused new vendor reservations as of late 2024​
@@ -39,7 +35,7 @@
 , plus a daily fee paid to the sponsoring student group of $125–$175 per day for each day you set up on the “mall” (the campus promenade)​
 . Certain high-traffic dates or locations have higher fees​
 . In practice, a local business might spend ~$200 (registration) + ~$625 (5 days at $125) per semester for the maximum 5 days allowed.</p>
-<p class="mb-4 leading-relaxed text-[#333]">Limits & Duration: Vendors are limited to 5 days per semester on campus​
+<p class="mb-4 leading-relaxed text-[#333]">Limits &amp; Duration: Vendors are limited to 5 days per semester on campus​
 ​
 . Each day’s operation is typically limited to a standard period (often about 4 hours is the norm for tabling)​
 . This limited duration means you have to pick your days/times (usually midday when foot traffic is highest).</p>
@@ -94,7 +90,7 @@ Flyers, Chalking, and Local Influencer Promotions</p>
 <p class="mb-4 leading-relaxed text-[#333]">Attention and Engagement: Students are bombarded with online ads and often scroll past them. Unless the ad is extremely compelling, it may get ignored (the classic “banner blindness”). On Devils Meet, any sponsored content or promotion appears within a context exclusively dedicated to the ASU community, likely making it feel more like a relevant announcement than a random ad. This can lead to higher engagement.</p>
 <p class="mb-4 leading-relaxed text-[#333]">Targeting Specific Campus Segments: Google/Facebook can’t inherently know who is an ASU student (they can approximate via location or if someone lists ASU in their profile, but it’s not exact). Devils Meet inherently knows its user base (registered .edu emails or similar for access), so if a local business wants to, for example, target only students on the Tempe campus or only undergraduates, Devils Meet could offer that precision. Traditional digital platforms can’t match that specificity without third-party data.</p>
 <p class="mb-4 leading-relaxed text-[#333]">In short, standard digital ads are broad and can be moderately costly for what you get. They only make sense if Devils Meet’s solution did not exist. But given Devils Meet’s focused network, it offers a much clearer line to the student audience without the noise and waste of other digital channels.</p>
-<h2 class="text-2xl font-semibold mt-10 mb-4">The Devils Meet Advantage: Value, Reach & Targeting</h2>
+<h2 class="text-2xl font-semibold mt-10 mb-4">The Devils Meet Advantage: Value, Reach &amp; Targeting</h2>
 <p class="mb-4 leading-relaxed text-[#333]">Devils Meet is a mobile application designed by ASU students exclusively for ASU students​</p>
 <p class="mb-4 leading-relaxed text-[#333]">. This exclusivity is key – it means any promotion through Devils Meet is automatically targeting enrolled ASU students, and no one else. Here’s a breakdown of why Devils Meet offers significantly better value, reach, and targeting for local businesses:</p>
 <p class="mb-4 leading-relaxed text-[#333]">Direct Reach into the Student Community: Unlike a physical banner or a random Instagram ad, a post on Devils Meet is seen in an environment for students, by students. If Devils Meet has, say, tens of thousands of ASU student users (which is likely given it’s open to all ASU and marketed as a way for students to connect), then a single announcement or featured post can potentially reach a huge portion of the student body very quickly. For example, if 10,000 students use the app daily, a promotion on Devils Meet could get 10k impressions in a day, something that would take many days of handing out flyers or a fortune spent on ads to achieve otherwise. And those impressions are all students (no outsiders).</p>
@@ -109,24 +105,28 @@ Flyers, Chalking, and Local Influencer Promotions</p>
 
 In summary, Devils Meet stands out by delivering better value, greater reach, and pinpoint targeting for local marketing to ASU students. It combines the best aspects of digital marketing (measurable, broad reach, low cost per impression) with the relevance of on-campus efforts (hitting the exact population you want, in a context that’s all about campus life).</p>
 <p class="mb-4 leading-relaxed text-[#333]">For a local business in Tempe, the case is clear: why spend $1,000 on a one-time banner or a couple days of tabling – reaching at best a sliver of the students – when for a fraction of that you could continuously engage thousands of Sun Devils through Devils Meet? By leveraging Devils Meet, businesses get significantly more “bang for their buck” and can build a sustained presence with ASU students, translating to more foot traffic, sales, and student loyalty. It’s the smart, 21st-century way to tap into the ASU market, handily outperforming the old-school methods in both cost efficiency and results.</p>
-
-
-  </section>
-
-  <!-- Footer -->
-  
+</section>
+<!-- Footer -->
 <section class="max-w-4xl mx-auto px-4 pb-16 text-base">
-  <h2 class="text-2xl font-bold mt-12 mb-4 text-[#8C1D40]">Sources</h2>
-  <ul class="list-disc pl-6 space-y-2 text-[#333]">
-    <li><a href="https://eoss.asu.edu" class="text-blue-600 underline" target="_blank">ASU Memorial Union vendor program guidelines (fees, limits for non-university organizations)</a></li>
-    <li><a href="https://eoss.asu.edu" class="text-blue-600 underline" target="_blank">ASU Event & Meeting Services policy update on outside vendors (paused as of Sept 2024)</a></li>
-    <li><a href="https://brandguide.asu.edu" class="text-blue-600 underline" target="_blank">ASU Brand Guide – restrictions on on-campus banners/signage and costs</a></li>
-    <li><a href="https://asu.edu" class="text-blue-600 underline" target="_blank">ASU Facts & Figures – Tempe campus student enrollment (for reach estimates)</a></li>
-    <li><a href="https://eoss.asu.edu" class="text-blue-600 underline" target="_blank">ASU Student Media advertising info (poster cases, digital ads in MU for ~$100)</a></li>
-    <li><a href="https://www.statepress.com" class="text-blue-600 underline" target="_blank">State Press (ASU) – example of student influencer follower counts (~10k)</a></li>
-  </ul>
+<h2 class="text-2xl font-bold mt-12 mb-4 text-[#8C1D40]">Sources</h2>
+<ul class="list-disc pl-6 space-y-2 text-[#333]">
+<li><a class="text-blue-600 underline" href="https://eoss.asu.edu" target="_blank">ASU Memorial Union vendor program guidelines (fees, limits for non-university organizations)</a></li>
+<li><a class="text-blue-600 underline" href="https://eoss.asu.edu" target="_blank">ASU Event &amp; Meeting Services policy update on outside vendors (paused as of Sept 2024)</a></li>
+<li><a class="text-blue-600 underline" href="https://brandguide.asu.edu" target="_blank">ASU Brand Guide – restrictions on on-campus banners/signage and costs</a></li>
+<li><a class="text-blue-600 underline" href="https://asu.edu" target="_blank">ASU Facts &amp; Figures – Tempe campus student enrollment (for reach estimates)</a></li>
+<li><a class="text-blue-600 underline" href="https://eoss.asu.edu" target="_blank">ASU Student Media advertising info (poster cases, digital ads in MU for ~$100)</a></li>
+<li><a class="text-blue-600 underline" href="https://www.statepress.com" target="_blank">State Press (ASU) – example of student influencer follower counts (~10k)</a></li>
+</ul>
 </section>
 
+<section class="max-w-4xl mx-auto px-4 pb-16 text-center">
+<h2 class="text-3xl font-bold text-[#8C1D40] mb-4">
+    Ready to promote your business to thousands of ASU students?
+  </h2>
+<p class="text-xl text-[#FFC627] bg-[#8C1D40] inline-block px-6 py-3 rounded-xl shadow-md">
+    Contact us at <a class="underline hover:text-yellow-300" href="mailto:Devilsmeet2@gmail.com">Devilsmeet2@gmail.com</a>
+</p>
+</section>
 <footer class="text-sm text-center text-gray-500 py-6">
     © 2025 Devils Meet. All rights reserved.
   </footer>
